fixing "sign in with google" button not centered in production

--- a/frontend/src/SignUp.module.css
+++ b/frontend/src/SignUp.module.css
@@ -36,3 +36,10 @@
 .form_container button:hover {
   background: #4954bb;
 }
+
+:global(.g_id_signin) {
+  display: block !important;
+  width: 90%    !important;  /* or 100%, to match your inputs/buttons */
+  margin: 0 auto !important;
+  margin-bottom: 1rem !important;
+}
